<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <Switch
        android:id="@+id/switch_timer"
        android:layout_width="210dp"
        android:layout_height="27dp"
        android:onClick="onTimerSwitch"
        android:textOff="@string/timers_hide"
        android:textOn="@string/timers_show"
        android:text="show timers"
        app:layout_constraintBottom_toTopOf="@+id/switch_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

    <Switch
        android:id="@+id/switch_button"
        android:layout_width="211dp"
        android:layout_height="31dp"
        android:onClick="onButtonSwitch"
        android:text="fancy buttons"
        android:textOff="@string/default_buttons"
        android:textOn="@string/fancy_buttons"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <EditText
        android:id="@+id/editTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="388dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="214dp"
        android:layout_height="37dp"
        android:layout_marginBottom="4dp"
        android:text="@string/time_limit"
        app:layout_constraintBottom_toTopOf="@+id/editTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:onClick="submitSettings"
        android:text="Begin Quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>